2010-12-03  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #10926: dynamicTyposcript Marker must be lowercase
	* Fixed bug #11255: "user_powermailOnCurrentPage" fails if "Show content from this page" is used
	* Fixed bug #11250: JavaScript Validation (Prototype) fails if mandatory Radio-Buttons / Checkboxes has not the same parent Element

2010-11-17  Andy Grunwald  <andreas.grunwald@wmdb.de>
	
	* Fixed bug #6523: date fields are ignored by JavaScript Validation
	* Fixed bug #10901: Fatal error: [] operator not supported for strings
	* Changed Powermail version to 1.5.7-dev
	* Fixed bug #10903: isFrontendEditingActive not exists in TYPO3 4.2

2010-11-16  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Raised Powermail version to 1.6.0-dev

2010-11-16  Alex Kellner  <alexander.kellner@einpraegsam.net>

	* Release of Powermail 1.5.6
	* Task #6185: Important manual changes needed

2010-11-15  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #10815: JS-Validation broken in current trunk

2010-11-10  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #3767: Multiple forms on 1 page with mandatory file uploads fields gives errors
	* Fixed bug #5894: Typo in pi1/locallang.xml
	* Fixed bug #5603: Call to an non member function enableFields

2010-11-09  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #4843: Zero-Values and Multi-Select-Values are not exported
	* Fixed bug #3161: GET vars should be urldecoded before inserted in field
	* Fixed bug #1090: form.HTMLentities - no double &amp; in formaction
	* Fixed bug #6336: powermail checkboxes and date2cal
	* Fixed bug #10456: SQL-Error occur, if enter a not valid date in backend module date fields
	* Raised version from 1.5.5 to 1.5.6-dev
	* Applied security fixes. For more information look at Security Bulletin TYPO3-SA-2010-021

2010-11-02  Andy Grunwald  <andreas.grunwald@wmdb.de>

	* Fixed bug #10228: markers are not substituted in subject of Database entry